plugins {
	id 'org.springframework.boot' version '2.4.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.test'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.security:spring-security-acl'
	implementation 'org.springframework:spring-context-support'

	implementation 'net.sf.ehcache:ehcache-core:2.6.11'
	implementation 'org.webjars:bootstrap:4.6.0-1'
	implementation 'org.webjars:webjars-locator:0.1'
	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
	implementation 'javax.servlet:jstl'
	implementation 'org.modelmapper:modelmapper:2.3.6'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
}

test {
	useJUnitPlatform()
}
